--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,17 +1,7 @@
-.main {
-  margin: 0 0 15px 0;
-}
-.project-box {
-  width: 300px;
-  height: auto;
-  margin-bottom: 15px;
-}
-.project-box img {
-  width: 100%;
-}
 .projects {
   margin: 50px 0;
 }
+
 .projects h2,
 .projects p {
   text-align: center;
@@ -38,7 +28,7 @@
 .projects .project-box {
   margin: 20px 0;
 }
-.projects .project-box:hover,
+
 .projects .tabs-bar:hover {
   cursor: pointer;
 }
@@ -57,28 +47,78 @@
 .tabs-bar .tab-box.active::before {
   width: 100% !important;
 }
-@media (max-width: 767px) {
-  .project-box {
+/* @media (max-width: 767px) {
+  .main {
     margin: 0 auto !important;
-    width: 250px;
+    width: 50% !important;
+  }
+} */
+@media (max-width: 711px) {
+  .main {
+    width: 100% !important;
   }
 }
-@media (max-width: 575px) {
-  .project-box {
-    margin: 0 auto !important;
-    width: 80%;
+@media (min-width: 712px) {
+  .main {
+    width: 48%;
   }
 }
-@media (max-width: 450px) {
-  .project-box {
-    margin: 0 auto !important;
-    width: 100%;
+@media (min-width: 1100px) {
+  .main {
+    width: 30% !important;
   }
 }
-.project-box,
+.project-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
 .main {
+  /* margin: 0 0 15px 0; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main.visible {
+  transform: rotate(50deg) !important;
+}
+.project-box {
+  width: 320px;
+  height: 200px;
+  min-width: 320px;
+  border-radius: 17px;
+  margin-bottom: 15px;
+  position: relative;
+  z-index: 10;
+}
+/* @media screen and (max-width: 711px) {
+  .project-box {
+    width: 100% !important;
+    height: 200px;
+  }
+} */
+
+/* .project-box.active-animation {
+  animation: 1s ease-out fadeInUpcard;
+}
+*/
+
+.project-box.filter {
+  filter: blur(4.79px) contrast(0.51) grayscale(0.63);
+  -webkit-filter: blur(4.79px) contrast(0.51) grayscale(0.63);
+  -moz-filter: blur(4.79px) contrast(0.51) grayscale(0.63);
+}
+.project-box .img {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.project-box {
   position: relative;
   overflow: hidden;
+  transition: 1s ease-in-out all;
 }
 .project-box::before {
   content: "";
@@ -88,7 +128,7 @@
   background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
   transition: 1s ease-in-out all;
   overflow: hidden;
-  border-radius: 17px;
+  z-index: 1;
 }
 .project-box:hover::before {
   height: 100%;
@@ -97,25 +137,25 @@
 
 .project-box .project-text {
   position: absolute;
-  top: 0%;
+  top: 50%;
+  transform: translateY(-50%);
   z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 100%;
   width: 100%;
+  display: flex;
   text-align: center;
-  transition: 1s ease-in-out all;
+  flex-direction: column;
+  transition: 1.5s ease-in-out all;
   opacity: 0;
 }
-.project-box .project-text:hover {
+.project-box:hover .project-text {
   opacity: 1;
 }
-
 .main .icon {
   position: absolute;
-  left: 8px;
-  bottom: 4px;
+  right: -40px;
   font-size: 32px;
+  z-index: 2;
+}
+.project-box:hover .icon {
+  right: 8px;
 }
