--- a/src/components/end/end.css
+++ b/src/components/end/end.css
@@ -61,7 +61,7 @@ textarea {
 }
 footer {
   padding: 50px 0;
-  background-image: url("../../assets//img/footer-bg.png");
+  background-image: url("../../assets//img/footer-bg.webp");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
