--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -166,7 +166,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 20px 100px 50px;
-  background-image: url("../../assets/img/banner-bg.png");
+  background-image: url("../../assets/img/banner-bg.webp");
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
