--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -89,6 +89,7 @@
   z-index: 10;
   overflow: hidden;
   transition: 1s ease-in-out all;
+  /* background-image: url("../../assets/img/project_image/calcoulater-small.png"); */
 }
 
 .project-box.filter {
@@ -99,8 +100,9 @@
 .project-box .img {
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
+  aspect-ratio: 1 / 1;
+  object-position: center;
+  object-fit: cover;
 }
 
 .project-box::before {
