--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -47,27 +47,7 @@
 .tabs-bar .tab-box.active::before {
   width: 100% !important;
 }
-/* @media (max-width: 767px) {
-  .main {
-    margin: 0 auto !important;
-    width: 50% !important;
-  }
-} */
-@media (max-width: 711px) {
-  .main {
-    width: 100% !important;
-  }
-}
-@media (min-width: 712px) {
-  .main {
-    width: 48%;
-  }
-}
-@media (min-width: 1100px) {
-  .main {
-    width: 30% !important;
-  }
-}
+
 .project-card-container {
   display: flex;
   flex-wrap: wrap;
@@ -86,10 +66,11 @@
   border-radius: 17px;
   margin-bottom: 15px;
   position: relative;
-  z-index: 10;
   overflow: hidden;
   transition: 1s ease-in-out all;
-  /* background-image: url("../../assets/img/project_image/calcoulater-small.png"); */
+}
+.project-box img.loaded {
+  opacity: 1 !important;
 }
 
 .project-box.filter {
@@ -103,21 +84,6 @@
   aspect-ratio: 1 / 1;
   object-position: center;
   object-fit: cover;
-}
-
-.project-box::before {
-  content: "";
-  width: 100%;
-  height: 0;
-  position: absolute;
-  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
-  transition: 1s ease-in-out all;
-  overflow: hidden;
-  z-index: 1;
-}
-.project-box:hover::before {
-  height: 100%;
-  opacity: 0.7;
 }
 
 .project-box .project-text {
@@ -134,13 +100,6 @@
 }
 .project-box:hover .project-text {
   opacity: 1;
-}
-.main .icon {
-  position: absolute;
-  right: -40px;
-  font-size: 32px;
   z-index: 2;
-}
-.project-box:hover .icon {
-  right: 8px;
+  color: white;
 }
