--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 nav.navbar {
   padding: 18px 0;
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
   top: 0;
   z-index: 10;
@@ -50,7 +50,7 @@ span.navbar-text {
   width: 42px;
   height: 42px;
   position: absolute;
-  background-color: #ffffff;
+  background-color: transparent;
   border-radius: 50%;
   transform: scale(0);
   transition: 0.3s ease-in-out;
